@startuml
skinparam classAttributeIconSize 0
hide circle
class FoodList {
    +FoodList()
    +addFood(food: Food): Void
    +printFoods(): Void
}
class Food {
    -name: String
    -calories: Double
    +Food(name: String, calories: Double)
    +getName(): String
    +getCalories: Double
    +print(): String
}
FoodList *--> "*" Food: contains >

class UserInfo {
    -name: String
    -weight: Double
    -height: Double
    -age: Integer
    -gender: String
    -aim: String
    -activeness: String
    -BMR: Double
    -AMR: Double
    -caloriesCap: Integer
    -currentCalories: Integer
    -calBMR(): Void
    -calAMR(): Void
    -setCaloriesCap(): Void
    +UserInfo()
    +setName(name: String): Void
    +setWeight(weight: Double): Void
    +setHeight(height: Double): Void
    +setAge(age: Integer): Void
    +setGender(gender: String): Void
    +setAim(aim: String): Void
    +setActiveness(activeness: String): Void
    +getCurrentCalories(): Double
    +updateInfo(name: String, weight: Double, height: Double, age: Integer,
                               gender: String, activeness: String, aim: String): Void
    +viewProfile(): String
    -consumptionOfCalories(food: Food): Void
}
UserInfo ..> Food
@enduml